hphp/test/zend/bad/tests-basic/php_egg_logo_guid.php
<?php
echo php_egg_logo_guid();
?>